fix(sidebar): prevent main content from shrinking when opening sidebar on small screens

--- a/src/app/components/layout/page-layout/sidebar/sidebar.component.scss
+++ b/src/app/components/layout/page-layout/sidebar/sidebar.component.scss
@@ -1,13 +1,4 @@
-// .selected-item {
-//     position: relative;
-//     &::before {
-//         position: absolute;
-//         left: -4px;
-//         top: 0;
-//         content: '';
-//         width: 10px;
-//         border-radius: 0 10px 10px 0;
-//         height: 100%;
-//         background-color: rgb(179, 49, 255);
-//     }
-// }
+:host {
+    position: relative;
+    z-index: 100;
+}
